--- a/public/contact.html
+++ b/public/contact.html
@@ -9,3 +9,16 @@
 </p>
 		<a href="public/about.html">About Me</a>
 		<a href="public/contact.html">Contact Me</a>
+
+<form>
+<label for="fname">First Name</label><br>
+<input type="text" id="fname"><br>
+<label for="lname">Last Name</label><br>
+<input type="text" id="lname"><br>
+<label>Email</label><br>
+<input type="Email"><br>
+<label>Your Message:</label><br>
+<textarea rows="10" cols="30"></textarea><br>
+<input type="submit" name="Submit" value="Submit"><br>
+	
+</form>
